@@ -1,15 +1,25 @@
 language: python
 sudo: false
 python:
-    - 2.6
     - 2.7
-    - 3.3
     - 3.4
     - 3.5
+    - 3.6
     - pypy
+    - pypy3
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
 install:
-    - pip install tox-travis
+    - pip install -U pip setuptools
+    - pip install -U coveralls coverage
+    - pip install -U -e .[test]
 script:
-    - tox
+    - coverage run -m zope.testrunner --test-path=src
+after_success:
+    - coveralls
 notifications:
     email: false
+cache: pip
