@@ -1,5 +1,4 @@
 [buildout]
-index = http://download.zope.org/zope3.4
 develop = .
 parts = test
 
