@@ -1,28 +1,28 @@
 [tox]
-envlist = py26,py27,py33,py34,py35,pypy
+envlist = py27,py34,py35,py36,py37,pypy,pypy3,coverage3
 
 [testenv]
 deps =
     zope.testrunner
 commands =
-    zope-testrunner --test-path=src {posargs:-pvc}
+    zope-testrunner --test-path=src {posargs:-vc}
 
 [testenv:coverage2]
 usedevelop = true
-basepython = python2
+basepython = python2.7
 deps =
     {[testenv]deps}
     coverage
 commands =
-    coverage run -m zope.testrunner --test-path=src {posargs:-pvc}
+    coverage run -m zope.testrunner --test-path=src {posargs:-vc}
     coverage report -m
 
 [testenv:coverage3]
 usedevelop = true
-basepython = python3
+basepython = python3.6
 deps =
     {[testenv]deps}
     coverage
 commands =
-    coverage run -m zope.testrunner --test-path=src {posargs:-pvc}
+    coverage run -m zope.testrunner --test-path=src {posargs:-vc}
     coverage report -m
